# yay

./: .gitignore  pyproject.toml
src/yay/: __init__.py  bot.py  like.py  main.py
